syntax = "proto3";

package common;

import "google/api/annotations.proto";
import "common/base.proto";

option java_multiple_files = true;
option java_package = "com.gdn.project.waroenk.common";
option java_outer_classname = "VersionServiceProto";

service VersionService {
  rpc GetVersion (common.Empty) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/api/version"
    };
  }
}

message VersionResponse {
  string name = 1;
  string version = 2;
}
